game working still need to figure out point system

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="col-md-2 col-xs-6">
         <button id="obi" class="character" value="obi">
 		      <div class="thumbnail">
-            <img src="assets/images/obi-wan-kenobi.jpeg" alt="...">
+            <img src="assets/images/obi-wan-kenobi.jpeg" id="obiImage" alt="...">
             <div class="caption">
               <h5>Obi-Wan Kenobi</h5>
               <p>120</p>
@@ -49,7 +49,7 @@
         <div class="col-md-2 col-xs-6">
         <button id="luke" class="character" value="luke">
 		      <div class="thumbnail">
-            <img src="assets/images/luke-skywalker.jpeg" alt="...">
+            <img src="assets/images/luke-skywalker.jpeg" id="lukeImage" alt="...">
             <div class="caption">
               <h5>Luke Skywalker</h5>
               <p>100</p>
@@ -61,7 +61,7 @@
         <div class="col-md-2 col-xs-6">
         <button id="sidious" class="character" value="sidious">
 		      <div class="thumbnail">
-            <img src="assets/images/darth-sidious.jpeg" alt="...">
+            <img src="assets/images/darth-sidious.jpeg" id="sidiousImage" alt="...">
             <div class="caption">
               <h5>Darth Sidious</h5>
               <p>150</p>
@@ -73,7 +73,7 @@
         <div class="col-md-2 col-xs-6">
         <button id="maul" class="character" value="maul">
 		      <div class="thumbnail">
-            <img src="assets/images/darth-maul.jpeg" alt="...">
+            <img src="assets/images/darth-maul.jpeg" id="maulImage" alt="...">
             <div class="caption">
               <h5>Darth Maul</h5>
               <p>180</p>
@@ -112,7 +112,7 @@
 
         <div class="col-md-4 col-xs-4">
           <div id="attack-button">
-            <button class="btn btn-danger btn-lg">Attack</button>
+            <button class="btn btn-danger btn-lg" id="fight-button" disabled="disabled">Attack</button>
           </div>
         </div>
 
