--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       <div class="row">
         <div class="col-sm-12">
-	  	  <h3>Choose Your Character</h3>
+	  	  <h3 id="charHeading">Choose Your Character</h3>
 	  	</div>
 	  </div> 
       
